# flowfabric-py

./: .gitattributes  .gitignore  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  test_delete_later.py
.github/workflows/: static.yml
docs/: index.md
docs/source/: conf.py  getting-started.rst  index.rst  summary.rst  usage.rst
flowfabric_py/: __init__.py  auth.py  catalog_utils.py  client.py  flowfabric_http.py  test_delete_later.py
flowfabricpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
site/: 404.html  index.html
site/search/: search_index.json
src/flowfabricpy/: __init__.py  auth.py  catalog_utils.py  client.py  flowfabric_http.py  test_delete_later.py
tests/: test_auth.py  test_catalog_utils.py  test_client.py  test_http.py
